# libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isprint.c  ft_ispunct.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelnode.c  ft_lstdelone.c  ft_lstfind.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  (+37 more)
inc/: ft_complex.h  ft_list.h  ft_stdlib.h  ft_vector.h  libft.h
inc/ft_printf/: pft_bigint.h  pft_buffer.h  pft_handle_asterisk.h  pft_handle_bigfloat.h  pft_handle_float.h  pft_handle_length.h  pft_handle_placeholder.h  pft_print_placeholder.h  pft_read_fields.h  pft_type_handlers.h  pft_utils.h
include/: ft_complex.h  ft_ctype.h  ft_list.h  ft_math.h  ft_stdio.h  ft_stdlib.h  ft_string.h  ft_vector.h  libft.h
include/hidden/: hd_error.h
include/internal/: in_error.h  in_get_next_line.h  in_strtol.h  in_strtoll.h
include/internal/printf/: pf_bigint.h  pf_buffer.h  pf_handle_asterisk.h  pf_handle_bigfloat.h  pf_handle_float.h  pf_handle_length.h  pf_handle_placeholder.h  pf_print_placeholder.h  pf_read_fields.h  pf_type_handlers.h  pf_utils.h
src/: complex_abs.c  complex_init.c  complex_sub.c  exit_with_error.c  ft_atoi.c  ft_atol.c  ft_atoll.c  ft_digittoint.c  ft_fabsl.c  ft_fmaxl.c  ft_fminl.c  ft_itoa.c  ft_memccpy.c  ft_memchr.c  ft_memset.c  ft_printf.c  ft_putnbr_fd.c  ft_strchr.c  ft_striter.c  ft_strjoin.c  ft_strlen.c  ft_strncasecmp.c  ft_strncmp.c  ft_strndup.c  ft_strnlen.c  ft_strsplit.c  ft_strtol.c  ft_strtoll.c  ft_strtrim.c  ft_swap.c  get_next_line.c  list_free.c  list_init.c  list_pop_back.c  list_pop_front.c  list_push_back.c  list_push_front.c  pft_bigint.c  pft_buffer.c  pft_handle_asterisk.c  (+28 more)
src/complex/: complex_abs.c  complex_add.c  complex_div.c  complex_init.c  complex_mul.c  complex_sub.c
src/ctype/: ft_digittoint.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isprint.c  ft_ispunct.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_tolower.c  ft_toupper.c
src/list/: list_clear.c  list_erase.c  list_free.c  list_init.c  list_insert.c  list_pop.c  list_pop_back.c  list_pop_front.c  list_push.c  list_push_back.c  list_push_front.c
src/math/: ft_fabs.c  ft_fabsf.c  ft_fabsl.c  ft_fmax.c  ft_fmaxf.c  ft_fmaxl.c  ft_fmin.c  ft_fminf.c  ft_fminl.c  ft_llmax.c  ft_llmin.c  ft_lmax.c  ft_lmin.c  ft_max.c  ft_min.c
src/stdio/: ft_error.c  ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  get_next_line.c
src/stdio/printf/: ft_printf.c  pf_bigint.c  pf_buffer.c  pf_handle_asterisk.c  pf_handle_bigfloat.c  pf_handle_bin.c  pf_handle_char.c  pf_handle_float.c  pf_handle_hex_lower.c  pf_handle_hex_upper.c  pf_handle_invalid.c  pf_handle_length.c  pf_handle_oct.c  pf_handle_percent.c  pf_handle_placeholder.c  pf_handle_pointer.c  pf_handle_rounding.c  pf_handle_signed.c  pf_handle_string.c  pf_handle_unsigned.c  pf_print_placeholder.c  pf_read_fields.c  pf_utils_1.c  pf_utils_2.c
src/stdlib/: free_split.c  ft_abs.c  ft_atoi.c  ft_atol.c  ft_atoll.c  ft_intlen.c  ft_itoa.c  ft_labs.c  ft_llabs.c  ft_memalloc.c  ft_memdel.c  ft_qsort.c  ft_strdel.c  ft_strnew.c  ft_strtol.c  ft_strtoll.c  ft_swap.c  xcalloc.c  xmalloc.c
src/string/: ft_bzero.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdup.c  ft_memmove.c  ft_mempcpy.c  ft_memset.c  ft_stpcpy.c  ft_stpncpy.c  ft_strcasecmp.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcnt.c  ft_strcpy.c  ft_strdup.c  ft_strendswith.c  ft_strequ.c  ft_striteri.c  ft_strjmp.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strlower.c  ft_strmap.c  ft_strmapi.c  ft_strncasecmp.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnequ.c  ft_strnlen.c  ft_strnstr.c  ft_strrchr.c  ft_strrev.c  (+6 more)
src/vector/: vector_free.c  vector_get.c  vector_init.c  vector_pop_back.c  vector_push_back.c  vector_resize.c  vector_reverse.c  vector_set.c  vector_sort.c
